Squashing bugs and adding shadows

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ font-family: 'Creepster';
     font-size: 35px;
     padding: 10px;
     font-weight:bolder;
-    margin-left: 1rem;
     transition: top 0.3s;
 }
 #navbar-top .navfont {
@@ -85,6 +84,7 @@ a:hover {
     width: 100%;
     height: 300px;
     background-color: white;
+    box-shadow:#616365;
 }
 /*Home Content*/
 #top .font {
@@ -468,7 +468,9 @@ position: absolute;
 .ad-container {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    align-items: center;
+    margin-top: 130px;
+    flex-basis: 40px;
     width: 100%;
 }
 
@@ -518,7 +520,6 @@ position: absolute;
     align-items: center;
     height: 606px;
     width: 1fr;
-    /* margin-right: 2rem; */
     margin-bottom: 20px;
 }
 
@@ -530,12 +531,9 @@ position: absolute;
     width: 540px;
     height: 444px;
     margin-bottom: 30px;
-    /* border: 3px solid black; */
 }
 
 .product-image img {
-    /* max-width: 100%;
-    max-height: 100%; */
     width: 540px;
     height: 444px;
     object-fit: cover;
@@ -652,12 +650,6 @@ position: absolute;
     background-color: #FF7373;
     border-color: #FF7373;
 }
-
-/* .btn:checked {
-    color: #fff;
-    background-color: #FF7373 !important;
-    border-color: #FF7373 !important;
-} */
 
 .btn-check:checked + .btn-outline-primary {
     color: #fff;
@@ -874,56 +866,6 @@ margin-right: 1.5rem;
         opacity: 1;
     }
 }
-
-/* .line-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 1rem auto;
-}
-
-.line-container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    margin: 1rem auto;
-}
-
-.line-container ul li {
-    box-sizing: border-box;
-    display: inline;
-    text-align: center;
-}
-
-.line-container a {
-    display: inline-block;
-    width: 100%;
-    padding: .75rem 0;
-    margin: 0;
-    text-decoration: none;
-    color: #333;
-}
-
-.two:hover~hr {
-    margin-left: 25%;
-}
-
-.three:hover~hr {
-    margin-left: 50%;
-}
-
-.four:hover~hr {
-    margin-left: 75%;
-}
-
-hr {
-    height: .25rem;
-    width: 25%;
-    margin: 0;
-    background: tomato;
-    border: none;
-    transition: .3s ease-in-out;
-} */
 /* Product-description end */
 
 /* Related-products */
@@ -939,6 +881,13 @@ hr {
     font-size: 1.25rem;
     font-weight: 600;
     margin-bottom: 20px;
+}
+
+.card.h-100 .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 /* Related-products end */
 
